--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,14 +1,16 @@
 	<section class="banner-w3ls">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="false">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="false">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
+				<li data-target="#myCarousel" data-slide-to="3"></li>
+				<!--<li data-target="#myCarousel" data-slide-to-"3"></li>-->
 			</ol>
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
-					<img class="first-slide" src="images/banner1.jpg" alt="First slide">
+					<img class="first-slide" src="./../../assets/images/banner1.jpg" alt="First slide">
 					<div class="container">
 						<div class="carousel-caption">
 							<h3 class="text-center">Lorem ipsum dolor sit amet.</h3>
@@ -17,7 +19,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="second-slide" src="images/banner2.jpg" alt="Second slide">
+					<img class="second-slide" src="./../../assets/images/banner2.jpg" alt="Second slide">
 					<div class="container">
 						<div class="carousel-caption">
 							<h3 class="text-center">consectetur adipiscing elit.</h3>
@@ -26,7 +28,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="third-slide" src="images/banner3.jpg" alt="Third slide">
+					<img class="third-slide" src="./../../assets/images/banner3.jpg" alt="Third slide">
 					<div class="container">
 						<div class="carousel-caption">
 							<h3 class="text-center">Proin velit tellus aliquet.</h3>
@@ -35,7 +37,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="third-slide" src="images/banner4.jpg" alt="Third slide">
+					<img class="fourth-slide" src="./../../assets/images/banner4.jpg" alt="Third slide">
 					<div class="container">
 						<div class="carousel-caption">
 							<h3 class="text-center">Suspendisse quis luctus urna.</h3>
