--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,3 +2,8 @@
     align-content:center;
     text-align:center;
 }
+.error-msg{
+    text-align: center;
+    color:darkred;
+    margin-top: 5px;
+}
