--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,10 @@ body{
 	margin:0;
 	background:#FFF;
 }
+html, body{
+	height:100%;
+	width:100%;
+}
 body a{
     transition:0.5s all;
 	-webkit-transition:0.5s all;
@@ -76,8 +80,6 @@ body {
 	-moz-background-size:100% 100%;
 	-o-background-size:100% 100%;
 	-ms-background-size:100% 100%;
-	height:100%;
-	width:100%;
 }
 section.ui-w3ls {
     width: 80%;
