Cleaned up Login/Logout. Added Blog
Made the Login/Logout process more seamless. Started some basic authentication too.
Added the Blogging components, including models and appropriate ApiService functions.
Got screwed over with CSS again. FML.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--<script type="text/javascript" src="./assets/js/modernizr.js"></script>-->
 <!-- /js -->
 </head>
-<body (load)="startTime()">
+<body>
 	<section class="ui-w3ls">
 	<!-- Static navbar -->
   <app-header-bar></app-header-bar>
