--- a/src/app/header-bar/header-bar.component.html
+++ b/src/app/header-bar/header-bar.component.html
@@ -16,20 +16,20 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
             </button>
-			<a class="navbar-brand" href="index.html"><h1><i class="fa fa-shield" aria-hidden="true"></i> Rustic UI Kit</h1></a>
+			<a class="navbar-brand" routerLink="home"><h1><i class="fa fa-shield" aria-hidden="true"></i> Rustic UI Kit</h1></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-				<li><a href="#"><i class="fa fa-pencil" aria-hidden="true"> Blog</i></a></li>
+				<li><a routerLink="/blog"><i class="fa fa-pencil" aria-hidden="true"> Blog</i></a></li>
 				<li><a href="malito:grans776@gmail.com"><i class="fa fa-bell" aria-hidden="true"> Contact</i></a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="./assets/images/log.jpg" class="img-circle img-responsive" alt=""></a>
 					<ul class="dropdown-menu">
 						<li *ngIf="!this.userSvc.isUserLoggedIn()"><a routerLink="/login" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a></li>
 						<li *ngIf="this.userSvc.isUserLoggedIn()"><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></li>
-						<li *ngIf="this.userSvc.isUserLoggedIn()"><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i> My Media</a></li>
+						<!--<li *ngIf="this.userSvc.isUserLoggedIn()"><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i> My Media</a></li>-->
 						<li *ngIf="this.userSvc.isUserLoggedIn()"><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Setting</a></li>
-						<li *ngIf="this.userSvc.isUserLoggedIn()"><a href="#"><i class="fa fa-power-off" aria-hidden="true"></i> Sign Out</a></li>
+						<li *ngIf="this.userSvc.isUserLoggedIn()"><a (click)="userLogout();"><i class="fa fa-power-off" aria-hidden="true"></i> Sign Out</a></li>
 					</ul>
 				</li>
             </ul>
