--- a/src/app/blog-home/blog-home.component.css
+++ b/src/app/blog-home/blog-home.component.css
@@ -14,3 +14,14 @@
     padding-right:0px;
     text-align:left;
 }
+.col-md-5{
+    padding-right:0px;
+    padding-left:0px;
+}
+.post-container{
+    padding-bottom:20px;
+    background:white;
+    padding-left:0px;
+    padding-right:0px;
+    background-clip: content-box;
+}
