Finished blog posts
Blog posts should be fully functional now. The API is also seeded with template data.
Previews (should) be working fine now.
Details should be working fine as well.
Only changes left are to test the effects of string length and to finish up some CSS styling.

--- a/src/app/blog-home/blog-home.component.css
+++ b/src/app/blog-home/blog-home.component.css
@@ -18,10 +18,17 @@
     padding-right:0px;
     padding-left:0px;
 }
+.col-md-2{
+    padding-right:0px;
+    padding-left:0px;
+}
 .post-container{
     padding-bottom:20px;
     background:white;
     padding-left:0px;
     padding-right:0px;
     background-clip: content-box;
+}
+.body-container{
+    height:100%;
 }
