--- a/src/app/header-bar/header-bar.component.html
+++ b/src/app/header-bar/header-bar.component.html
@@ -16,7 +16,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
             </button>
-			<a class="navbar-brand" routerLink="home"><h1><i class="fa fa-shield" aria-hidden="true"></i> Rustic UI Kit</h1></a>
+			<a class="navbar-brand" routerLink="home"><h1><i class="fa fa-shield" aria-hidden="true"></i> The Far Edge</h1></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
